@@ -522,7 +522,7 @@ cat ../syscall/syscall.csv ../lib/lib.csv | sort >tmp.csv
 </p>
 
 <p><b>NOTE:</b>
-  There are two linker scripts located at <code>binfmt/libnxflat/gnu-nxflat-gotoff.ld</code>.
+  There are two linker scripts located at <code>binfmt/libnxflat/</code>.
 </p>
 <ol>
   <li>
