@@ -123,4 +123,7 @@ buildroot-1.11 2011-xx-xx <gnutt@nuttx.org>
 	  type was not generated by GCC/LD prior to gcc-4.6.3
 	* R_ARM_REL32 logic is conditionally disabled because it has not been
 	  tested.
+	* ldnxflat: Correct a memory allocation error that could cause written
+	  past the end of allocated memory.  Partial restoration of R_ARM_REL32
+	  logic.  There are lots of issues that I still do not understand here.
 
